--- a/FormHandling/package.json
+++ b/FormHandling/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice",
+  "name": "formhandling",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,10 +12,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1",
-    "remixicon": "^4.3.0",
-    "sweetalert2": "^11.12.4"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
