--- a/E-commerce/package.json
+++ b/E-commerce/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "remixicon": "^4.3.0",
+    "sweetalert2": "^11.13.1",
     "swiper": "^11.1.11"
   },
   "devDependencies": {
